Fix dark mode for wayfarers

--- a/src/css/games/wayfarers.less
+++ b/src/css/games/wayfarers.less
@@ -24,8 +24,8 @@ html[data-theme=dark].bgaext_dark:before {
 	top: 0;
 	width: 100%;
 	z-index: -1;
-	filter: invert(1) hue-rotate(180deg);
-	opacity: 1;
+	filter: invert()hue-rotate(180deg) grayscale(0.5);
+	opacity: 0.7;
 }
 
 html[data-theme=dark].bgaext_dark {
